--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/graphql": "^7.3.9",
     "@nestjs/microservices": "^7.0.11",
     "@nestjs/platform-express": "^7.0.0",
+    "apollo-server-express": "^2.13.1",
     "graphql": "^15.0.0",
     "graphql-tools": "^5.0.0",
     "reflect-metadata": "^0.1.13",
