--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/microservices": "^7.0.11",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.13.1",
+    "dotenv": "^8.2.0",
     "graphql": "^15.0.0",
     "graphql-tools": "^5.0.0",
     "reflect-metadata": "^0.1.13",
