--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.4.2",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.3.9",
     "@nestjs/microservices": "^7.0.11",
+    "@nestjs/mongoose": "^7.0.1",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.13.1",
-    "dotenv": "^8.2.0",
     "graphql": "^15.0.0",
     "graphql-tools": "^5.0.0",
+    "mongoose": "^5.9.14",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
@@ -40,6 +42,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
+    "@types/mongoose": "^5.7.19",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
