--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/federation": "^0.16.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.4.2",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.3.9",
     "@nestjs/microservices": "^7.0.11",
     "@nestjs/mongoose": "^7.0.1",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.13",
     "apollo-server-express": "^2.13.1",
     "graphql": "^15.0.0",
     "graphql-tools": "^5.0.0",
