Update docker config

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,11 +1,24 @@
 FROM node:13.12.0-alpine as build
+
 WORKDIR /app
+
+RUN apk add --no-cache openssl
+
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 ENV PATH /app/node_modules/.bin:$PATH
+
 COPY package.json ./
 COPY yarn.lock ./
 
 RUN yarn
-COPY . ./
-RUN yarn run build
+
+COPY . .
+
+RUN yarn build
+
 EXPOSE 3001
+
 CMD ["yarn", "run", "start:prod"]
